<resources>
    <string name="app_name">offline QR Scanner And Generator</string>

    <string name="drawer_close">close drawer</string>
    <string name="drawer_open">open drawer</string>
    <string name="share">share</string>
    <string name="privacy_policy">privacy_policy</string>
    <string name="Rate_us">Rate_us</string>
    <string name="image_placeholder" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_text_to_generate_qr_code">Enter text to generate QR code</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="enter_text_to_generate_barcode">Enter text to generate barcode</string>
    <string name="generate_barcode">Generate Barcode</string>
    <string name="qr_scan">Qr Scan</string>
    <string name="barcode_scan">Barcode Scan</string>
    <string name="please_scan_again">Please Scan Again</string>
    <string name="copy_text">Copy Text</string>
    <string name="generate">Generate</string>
    <string name="scan_qr_code">Scan Qr code</string>
    <string name="result">Result</string>
</resources>