<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



<!--        <item-->
<!--            android:id="@+id/icon_homes"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:title="@string/home"-->
<!--            android:iconTint="@color/sky"-->
<!--            android:icon="@drawable/home"-->
<!--            android:checkable="true"-->
<!--            />-->


        <item
            android:id="@+id/icon_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/share"
            android:iconTint="@color/sky"
            android:icon="@drawable/share"
            android:checkable="true"
            />
        <item
            android:id="@+id/icon_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/privacy_policy"
            android:iconTint="@color/sky"
            android:icon="@drawable/privrcy"
            android:checkable="true"
            />
        <item
            android:id="@+id/icon_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/Rate_us"
            android:iconTint="@color/sky"
            android:icon="@drawable/rating"
            android:checkable="true"
            />



</menu>