<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resultActivity"
    android:background="@color/black"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sky"

        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/result"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/back"
            app:navigationIconTint="@color/white"

            />

    </com.google.android.material.appbar.AppBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:orientation="vertical"
        android:background="@drawable/result_bg"
        android:layout_margin="@dimen/_10ssp"
        android:padding="@dimen/_10ssp"
        >

        <TextView
            android:id="@+id/resultTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_scan_again"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/copyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:text="@string/copy_text" />


    </LinearLayout>
</RelativeLayout>